# tempest-plugin-demo

./: .coveragerc  .gitreview  .stestr.conf  CONTRIBUTING.rst  HACKING.rst  README.md  setup.cfg  tox.ini
doc/: README.md
doc/LOGS/: README.md  cookiecutter_debug.md  cookiecutter_success.md
doc/source/: conf.py  index.rst
doc/source/admin/: index.rst
doc/source/cli/: index.rst
doc/source/configuration/: index.rst
doc/source/install/: common_configure.rst  common_prerequisites.rst  get_started.rst  index.rst  install-obs.rst  install-rdo.rst  install-ubuntu.rst  install.rst  next-steps.rst  verify.rst
doc/source/reference/: index.rst
doc/source/user/: index.rst
my_tempest_tests/: config.py  plugin.get_opt_list.py  plugin.init.py  plugin.load_tests.py  plugin.py  plugin.register_opts.py
my_tempest_tests/tests/: test_my_tempest_tests.py
releasenotes/source/: conf.py  index.rst
tempest_tests/: __init__.py
tempest_tests/tests/: test_tempest_tests.py
