[metadata]
name = tempest-plugin-demo
summary = OpenStack Boilerplate contains all the boilerplate you need to create an OpenStack package.
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    my_tempest_tests

[build_sphinx]
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = my_tempest_tests/locale
domain = my_tempest_tests

[update_catalog]
domain = my_tempest_tests
output_dir = my_tempest_tests/locale
input_file = my_tempest_tests/locale/my_tempest_tests.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = my_tempest_tests/locale/my_tempest_tests.pot

[entry_points]
tempest.test_plugins =
    plugin_name = my_tempest_tests.plugin:MyTempestPlugin
